tests/transpiler/x/scala/append_builtin.scala
// Generated by Mochi v0.10.31 on 2025-07-20 02:16:21 GMT+7
object Main extends App {
  val a: List[Any] = List(1, 2)
  println(append(a, 3))
}
